ewarehouse-apex/api/src/objects/e_Warehouse_Dashboard_Info__c.object
<CustomObject>
    <fields>
        <fullName>Baseline_Date__c</fullName>
        <defaultValue>DATE(2013, 8, 1)</defaultValue>
        <label>Baseline Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CVs_Covered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CVs Covered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cache_timeout__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Cache timeout (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farmers_receiving_information__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of farmers receiving market information through SMS</description>
        <label>Farmers receiving information</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Farmers_with_previous_Financial_Service__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of farmers who had financial services before joining the e-Warehouse</description>
        <label>Farmers with previous Financial Service</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grain_checks_FCI_staff_and_VKWs__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of checks conducted by FCI staff and VKWs on grain stored</description>
        <label>Grain checks FCI staff and VKWs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_update__c</fullName>
        <label>Last update</label>
        <type>DateTime</type>
    </fields>
    <label>e-Warehouse Dashboard Info</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e-Warehouse Dashboard Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>